<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spending Tracker</string>
    <string name="no_transactions">No Transactions</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="hint_description">Description</string>
    <string name="hint_merchant">Merchant</string>
    <string name="hint_date">Date Recorded</string>
    <string name="hint_amount">Amount (VNĐ)</string>
    <string name="label_description">Description:</string>
    <string name="label_merchant">Merchant:</string>
    <string name="label_date">Date:</string>
    <string name="label_amount">Amount:</string>
    <string name="label_transaction_type">Type:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the transaction</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter all required fields</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="login_text_view">Login to Spending Tracker</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_with_Google">Login with Google</string>
    <string name="default_web_client_id">510994033480-gc1f2rmo7ss2iij9pc8ithuep9ivg00b.apps.googleusercontent.com</string>
    <string name="button_text_logout">Log out</string>
    <string name="transaction_saved_message">Transaction saved!</string>
    <string name="error_saving_transaction_message">Error saving transaction, please try again later</string>
    <string name="error_deleting_transaction_message">Error deleting transaction, please try again later</string>
    <string name="transaction_description_max_length">30</string>
    <string name="text_no_transaction">No transactions found</string>
    <string name="hint_search">Search...</string>
    <string name="earningText">"Earned: "</string>
    <string name="expenseText">"Spent: "</string>
    <string name="remainingText">"Remaining: "</string>
    <string name="overspentText">"Overspent: "</string>
    <string name="monthText">"Current month: "</string>
    <string name="inThisMonthText">In this month:</string>
    <string name="recent_transaction_header_text">Recent transactions:</string>
    <string name="load_more">Load More</string>
    <string name="text_no_new_transaction_yet">No new transactions yet</string>
    <string name="network_error_message">Please make sure your Internet connection is stable.\Else, trying moving between tabs while the app loads data.\nIf anything happen, please report to: buiminhson940@gmail.com</string>
    <string name="api_error_message">There has been an issue in the app, please report this issue to: buiminhson940@gmail.com.\nThank you for your cooperation!</string>
    <string name="hint_select_year">Select Year</string>
    <string name="topIncomeText">Top Income:</string>
    <string name="topExpenseText">Top Expense:</string>
    <string name="inThisYearText">In this year:</string>
    <string name="selectedYearText">Selected Year:</string>
    <string name="no_edit_message">You haven\'t changed any field</string>

</resources>