<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/descriptionLabelTextView"
            style="@style/TransactionLabelTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_description" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/TransactionTextView" />

        <TextView
            android:id="@+id/merchantLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_merchant"
            style="@style/TransactionLabelTextView" />

        <TextView
            android:id="@+id/merchantTextView"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/TransactionTextView" />

        <TextView
            android:id="@+id/dateLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_date"
            style="@style/TransactionLabelTextView" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/TransactionTextView" />

        <TextView
            android:id="@+id/amountLabelTextView"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_amount"
            style="@style/TransactionLabelTextView" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/TransactionTextView" />

        <TextView
            android:id="@+id/transactionTypeLabelTextView"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_transaction_type"
            style="@style/TransactionLabelTextView" />

        <TextView
            android:id="@+id/transactionTypeTextView"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/TransactionTextView" />

    </GridLayout>

</ScrollView>