<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingHorizontal="@dimen/authentication_activity_horizontal_margin"
    android:paddingVertical="@dimen/authentication_activity_vertical_margin">

    <GridLayout
        android:id="@+id/linearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/login_text_view">

        </TextView>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="@color/design_default_color_error"
        >

        </TextView>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_row="4"
            android:layout_column="0"
            android:text="Sign up" />

        <Button
            android:id="@+id/loginWithGoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_login_with_Google" />


    </GridLayout>

</GridLayout>